Changes dont in the column heading of the dataset

--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -709,7 +709,7 @@
    "source": [
     "trained_data = pd.DataFrame()\n",
     "trained_data['statement'] = x_train\n",
-    "trained_data['y_train'] = y_train\n",
+    "trained_data['emotion'] = y_train\n",
     "trained_data.to_csv(r'..\\dataset\\training_dataset.csv',index=False)"
    ]
   },
