Changes done in Model Training.ipynb

--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -95,79 +95,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6672</th>\n",
-       "      <td>i tend to feel a bit cranky when i ve gone for...</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15204</th>\n",
-       "      <td>i look at the feelings which i think have in s...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12958</th>\n",
-       "      <td>i probably should have written this closer to ...</td>\n",
+       "      <th>1027</th>\n",
+       "      <td>im feeling quite joyful today</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7433</th>\n",
-       "      <td>i really hate this feeling when you really giv...</td>\n",
+       "      <th>91</th>\n",
+       "      <td>im feeling bitter today my mood has been stran...</td>\n",
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6715</th>\n",
-       "      <td>i really feel that when people consistently ma...</td>\n",
+       "      <th>6997</th>\n",
+       "      <td>im feeling a little overwhelmed</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16481</th>\n",
+       "      <td>i feel hated there but had to remind my selfis...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18455</th>\n",
-       "      <td>i feel ugly i cover myself with a beautiful bl...</td>\n",
+       "      <th>15518</th>\n",
+       "      <td>i feel honoured to be asked thanks a href http...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19131</th>\n",
+       "      <td>i feel terrible when i hurt peoples feelings w...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16987</th>\n",
-       "      <td>i somehow feel glad shes now in malacca with m...</td>\n",
+       "      <th>14004</th>\n",
+       "      <td>i think he is the next best because i see a lo...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8399</th>\n",
-       "      <td>i feel like i should have something more intel...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>888</th>\n",
-       "      <td>i feel bothered</td>\n",
+       "      <th>7852</th>\n",
+       "      <td>im with you when your professor looks at you l...</td>\n",
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14070</th>\n",
-       "      <td>i can barely maintain long distance relationsh...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10452</th>\n",
-       "      <td>i was feeling pretty wimpy in it</td>\n",
+       "      <th>9079</th>\n",
+       "      <td>i didnt want aubrey to feel pressured or rushe...</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17811</th>\n",
-       "      <td>i get the feeling of the idiotic girls i see e...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1167</th>\n",
-       "      <td>i wasnt feeling that hot prior to vineman but ...</td>\n",
-       "      <td>love</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12829</th>\n",
-       "      <td>i feel less assaulted by my inadequacies under...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3567</th>\n",
-       "      <td>i came to this realization that i was often fe...</td>\n",
-       "      <td>sadness</td>\n",
+       "      <th>19484</th>\n",
+       "      <td>i have had moments of feeling silently offende...</td>\n",
+       "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8160</th>\n",
@@ -175,51 +150,76 @@
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2721</th>\n",
-       "      <td>i do do what i do it always feels worthwhile a...</td>\n",
+       "      <th>10200</th>\n",
+       "      <td>i feel thankful for everything in my life ever...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14801</th>\n",
-       "      <td>im feeling extremely blessed to be pregnant</td>\n",
+       "      <th>12782</th>\n",
+       "      <td>i am feeling incredibly generous i will allow ...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16428</th>\n",
+       "      <td>i find enlightening and brilliant when i am fe...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19073</th>\n",
-       "      <td>i find it relaxes me and i feel productive mak...</td>\n",
+       "      <th>8450</th>\n",
+       "      <td>i use this as a ugh its been a long week lets ...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1456</th>\n",
+       "      <td>i am already feeling homesick for a country th...</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5313</th>\n",
+       "      <td>i am now drunk again and feel fab</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11280</th>\n",
-       "      <td>i am a very goal oriented person and i never f...</td>\n",
+       "      <th>69</th>\n",
+       "      <td>i was feeling brave when i bought it and clear...</td>\n",
        "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15880</th>\n",
+       "      <td>i get a slightly warm feeling coming over me a...</td>\n",
+       "      <td>fear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4916</th>\n",
+       "      <td>i never realized just how awful my mother has ...</td>\n",
+       "      <td>fear</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               statement  emotion\n",
-       "6672   i tend to feel a bit cranky when i ve gone for...    anger\n",
-       "15204  i look at the feelings which i think have in s...  sadness\n",
-       "12958  i probably should have written this closer to ...      joy\n",
-       "7433   i really hate this feeling when you really giv...    anger\n",
-       "6715   i really feel that when people consistently ma...  sadness\n",
-       "18455  i feel ugly i cover myself with a beautiful bl...  sadness\n",
-       "16987  i somehow feel glad shes now in malacca with m...      joy\n",
-       "8399   i feel like i should have something more intel...      joy\n",
-       "888                                      i feel bothered    anger\n",
-       "14070  i can barely maintain long distance relationsh...  sadness\n",
-       "10452                   i was feeling pretty wimpy in it     fear\n",
-       "17811  i get the feeling of the idiotic girls i see e...  sadness\n",
-       "1167   i wasnt feeling that hot prior to vineman but ...     love\n",
-       "12829  i feel less assaulted by my inadequacies under...  sadness\n",
-       "3567   i came to this realization that i was often fe...  sadness\n",
-       "8160                     i needed but i m feeling greedy    anger\n",
-       "2721   i do do what i do it always feels worthwhile a...      joy\n",
-       "14801        im feeling extremely blessed to be pregnant      joy\n",
-       "19073  i find it relaxes me and i feel productive mak...      joy\n",
-       "11280  i am a very goal oriented person and i never f...      joy"
+       "                                               statement   emotion\n",
+       "1027                       im feeling quite joyful today       joy\n",
+       "91     im feeling bitter today my mood has been stran...     anger\n",
+       "6997                     im feeling a little overwhelmed  surprise\n",
+       "16481  i feel hated there but had to remind my selfis...   sadness\n",
+       "15518  i feel honoured to be asked thanks a href http...       joy\n",
+       "19131  i feel terrible when i hurt peoples feelings w...   sadness\n",
+       "14004  i think he is the next best because i see a lo...       joy\n",
+       "7852   im with you when your professor looks at you l...     anger\n",
+       "9079   i didnt want aubrey to feel pressured or rushe...      fear\n",
+       "19484  i have had moments of feeling silently offende...     anger\n",
+       "8160                     i needed but i m feeling greedy     anger\n",
+       "10200  i feel thankful for everything in my life ever...       joy\n",
+       "12782  i am feeling incredibly generous i will allow ...      love\n",
+       "16428  i find enlightening and brilliant when i am fe...       joy\n",
+       "8450   i use this as a ugh its been a long week lets ...      love\n",
+       "1456   i am already feeling homesick for a country th...   sadness\n",
+       "5313                   i am now drunk again and feel fab       joy\n",
+       "69     i was feeling brave when i bought it and clear...       joy\n",
+       "15880  i get a slightly warm feeling coming over me a...      fear\n",
+       "4916   i never realized just how awful my mother has ...      fear"
       ]
      },
      "execution_count": 3,
