Code change in model saving code

--- a/notebooks/Model Testing.ipynb
+++ b/notebooks/Model Testing.ipynb
@@ -18,7 +18,8 @@
     "import pickle\n",
     "from sklearn.metrics import accuracy_score,confusion_matrix,classification_report,ConfusionMatrixDisplay\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "import joblib"
    ]
   },
   {
@@ -41,8 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('..\\\\models\\\\Text-Emotion-Classifier.pkl','rb') as model_file :\n",
-    "    model = pickle.load(model_file)"
+    "model = joblib.load(r'..\\models\\text-emotion-classifier.joblib')"
    ]
   },
   {
@@ -498,7 +498,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x24c8f1355e0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x152da1435f0>"
       ]
      },
      "execution_count": 13,
