--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -30,7 +30,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "import pickle"
+    "import joblib"
    ]
   },
   {
@@ -95,104 +95,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1027</th>\n",
-       "      <td>im feeling quite joyful today</td>\n",
+       "      <th>18180</th>\n",
+       "      <td>i was feeling particularly vulnerable in a spe...</td>\n",
+       "      <td>fear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18768</th>\n",
+       "      <td>i feel like damaged goods no one will want me now</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9304</th>\n",
+       "      <td>i just feel like i havent shaken it up lately</td>\n",
+       "      <td>fear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9950</th>\n",
+       "      <td>i parted feeling that we had created some wond...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>im feeling bitter today my mood has been stran...</td>\n",
+       "      <th>8559</th>\n",
+       "      <td>i love more than anyone made me feel like i ha...</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18093</th>\n",
+       "      <td>i was feeling weird the other day and it went ...</td>\n",
+       "      <td>fear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19748</th>\n",
+       "      <td>i didnt want to be spending my days working in...</td>\n",
        "      <td>anger</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6997</th>\n",
-       "      <td>im feeling a little overwhelmed</td>\n",
+       "      <th>12062</th>\n",
+       "      <td>i gave them a little something out of my paypa...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6812</th>\n",
+       "      <td>i usually am all over that it probably comes t...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11371</th>\n",
+       "      <td>i was thinking about going out to dinner but i...</td>\n",
+       "      <td>anger</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6431</th>\n",
+       "      <td>i got contact lenses the other day and am tryi...</td>\n",
        "      <td>surprise</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16481</th>\n",
-       "      <td>i feel hated there but had to remind my selfis...</td>\n",
+       "      <th>19422</th>\n",
+       "      <td>i was wondering if you will focus on the probl...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15518</th>\n",
-       "      <td>i feel honoured to be asked thanks a href http...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19131</th>\n",
-       "      <td>i feel terrible when i hurt peoples feelings w...</td>\n",
+       "      <th>2892</th>\n",
+       "      <td>i told her i don t think she appreciates just ...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14004</th>\n",
-       "      <td>i think he is the next best because i see a lo...</td>\n",
+       "      <th>461</th>\n",
+       "      <td>i just remember being so fully stressed out an...</td>\n",
        "      <td>joy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7852</th>\n",
-       "      <td>im with you when your professor looks at you l...</td>\n",
-       "      <td>anger</td>\n",
+       "      <th>4735</th>\n",
+       "      <td>i am feeling all melancholy</td>\n",
+       "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9079</th>\n",
-       "      <td>i didnt want aubrey to feel pressured or rushe...</td>\n",
+       "      <th>2713</th>\n",
+       "      <td>i just feel overwhelmed thinking about it</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5175</th>\n",
+       "      <td>i start feeling anxious again</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19484</th>\n",
-       "      <td>i have had moments of feeling silently offende...</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8160</th>\n",
-       "      <td>i needed but i m feeling greedy</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10200</th>\n",
-       "      <td>i feel thankful for everything in my life ever...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12782</th>\n",
-       "      <td>i am feeling incredibly generous i will allow ...</td>\n",
+       "      <th>61</th>\n",
+       "      <td>i ate i could feel a gentle tingle throughout ...</td>\n",
        "      <td>love</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16428</th>\n",
-       "      <td>i find enlightening and brilliant when i am fe...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8450</th>\n",
-       "      <td>i use this as a ugh its been a long week lets ...</td>\n",
-       "      <td>love</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1456</th>\n",
-       "      <td>i am already feeling homesick for a country th...</td>\n",
+       "      <th>8710</th>\n",
+       "      <td>i feel so disturbed i have been having difficu...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5313</th>\n",
-       "      <td>i am now drunk again and feel fab</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>i was feeling brave when i bought it and clear...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15880</th>\n",
-       "      <td>i get a slightly warm feeling coming over me a...</td>\n",
-       "      <td>fear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4916</th>\n",
-       "      <td>i never realized just how awful my mother has ...</td>\n",
-       "      <td>fear</td>\n",
+       "      <th>16619</th>\n",
+       "      <td>i posted i think it was about feeling sorta sh...</td>\n",
+       "      <td>sadness</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -200,26 +200,26 @@
       ],
       "text/plain": [
        "                                               statement   emotion\n",
-       "1027                       im feeling quite joyful today       joy\n",
-       "91     im feeling bitter today my mood has been stran...     anger\n",
-       "6997                     im feeling a little overwhelmed  surprise\n",
-       "16481  i feel hated there but had to remind my selfis...   sadness\n",
-       "15518  i feel honoured to be asked thanks a href http...       joy\n",
-       "19131  i feel terrible when i hurt peoples feelings w...   sadness\n",
-       "14004  i think he is the next best because i see a lo...       joy\n",
-       "7852   im with you when your professor looks at you l...     anger\n",
-       "9079   i didnt want aubrey to feel pressured or rushe...      fear\n",
-       "19484  i have had moments of feeling silently offende...     anger\n",
-       "8160                     i needed but i m feeling greedy     anger\n",
-       "10200  i feel thankful for everything in my life ever...       joy\n",
-       "12782  i am feeling incredibly generous i will allow ...      love\n",
-       "16428  i find enlightening and brilliant when i am fe...       joy\n",
-       "8450   i use this as a ugh its been a long week lets ...      love\n",
-       "1456   i am already feeling homesick for a country th...   sadness\n",
-       "5313                   i am now drunk again and feel fab       joy\n",
-       "69     i was feeling brave when i bought it and clear...       joy\n",
-       "15880  i get a slightly warm feeling coming over me a...      fear\n",
-       "4916   i never realized just how awful my mother has ...      fear"
+       "18180  i was feeling particularly vulnerable in a spe...      fear\n",
+       "18768  i feel like damaged goods no one will want me now   sadness\n",
+       "9304       i just feel like i havent shaken it up lately      fear\n",
+       "9950   i parted feeling that we had created some wond...       joy\n",
+       "8559   i love more than anyone made me feel like i ha...   sadness\n",
+       "18093  i was feeling weird the other day and it went ...      fear\n",
+       "19748  i didnt want to be spending my days working in...     anger\n",
+       "12062  i gave them a little something out of my paypa...       joy\n",
+       "6812   i usually am all over that it probably comes t...       joy\n",
+       "11371  i was thinking about going out to dinner but i...     anger\n",
+       "6431   i got contact lenses the other day and am tryi...  surprise\n",
+       "19422  i was wondering if you will focus on the probl...   sadness\n",
+       "2892   i told her i don t think she appreciates just ...   sadness\n",
+       "461    i just remember being so fully stressed out an...       joy\n",
+       "4735                         i am feeling all melancholy   sadness\n",
+       "2713           i just feel overwhelmed thinking about it  surprise\n",
+       "5175                       i start feeling anxious again      fear\n",
+       "61     i ate i could feel a gentle tingle throughout ...      love\n",
+       "8710   i feel so disturbed i have been having difficu...   sadness\n",
+       "16619  i posted i think it was about feeling sorta sh...   sadness"
       ]
      },
      "execution_count": 3,
@@ -736,10 +736,20 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['..\\\\models\\\\text-emotion-classifier.joblib']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open('..\\\\models\\\\Text-Emotion-Classifier.pkl','wb') as model_file :\n",
-    "    pickle.dump(pipe_lor,model_file)"
+    "joblib.dump(pipe_lor,r'..\\models\\text-emotion-classifier.joblib')"
    ]
   },
   {
