small change in path of saved model to solve path issue

--- a/notebooks/Model Testing.ipynb
+++ b/notebooks/Model Testing.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = joblib.load(r'..\\models\\text-emotion-classifier.joblib')"
+    "model = joblib.load(r'..\\text-emotion-classifier.joblib')"
    ]
   },
   {
@@ -498,7 +498,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x152da1435f0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x29c474a15b0>"
       ]
      },
      "execution_count": 13,
