--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -95,104 +95,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>18180</th>\n",
-       "      <td>i was feeling particularly vulnerable in a spe...</td>\n",
+       "      <th>5332</th>\n",
+       "      <td>i feel that i am getting more and more timid t...</td>\n",
        "      <td>fear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18768</th>\n",
-       "      <td>i feel like damaged goods no one will want me now</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9304</th>\n",
-       "      <td>i just feel like i havent shaken it up lately</td>\n",
-       "      <td>fear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9950</th>\n",
-       "      <td>i parted feeling that we had created some wond...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8559</th>\n",
-       "      <td>i love more than anyone made me feel like i ha...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18093</th>\n",
-       "      <td>i was feeling weird the other day and it went ...</td>\n",
-       "      <td>fear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19748</th>\n",
-       "      <td>i didnt want to be spending my days working in...</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12062</th>\n",
-       "      <td>i gave them a little something out of my paypa...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6812</th>\n",
-       "      <td>i usually am all over that it probably comes t...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11371</th>\n",
-       "      <td>i was thinking about going out to dinner but i...</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6431</th>\n",
-       "      <td>i got contact lenses the other day and am tryi...</td>\n",
-       "      <td>surprise</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19422</th>\n",
-       "      <td>i was wondering if you will focus on the probl...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2892</th>\n",
-       "      <td>i told her i don t think she appreciates just ...</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>461</th>\n",
-       "      <td>i just remember being so fully stressed out an...</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4735</th>\n",
-       "      <td>i am feeling all melancholy</td>\n",
-       "      <td>sadness</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2713</th>\n",
-       "      <td>i just feel overwhelmed thinking about it</td>\n",
-       "      <td>surprise</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5175</th>\n",
-       "      <td>i start feeling anxious again</td>\n",
-       "      <td>fear</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>i ate i could feel a gentle tingle throughout ...</td>\n",
+       "      <th>1677</th>\n",
+       "      <td>i really am a hard worker and feel quite loyal...</td>\n",
        "      <td>love</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8710</th>\n",
-       "      <td>i feel so disturbed i have been having difficu...</td>\n",
+       "      <th>17072</th>\n",
+       "      <td>i love your style and feel very comfortable wi...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9820</th>\n",
+       "      <td>i feel sympathetic towards companies that have...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17543</th>\n",
+       "      <td>im glad i feel this way because if i didnt the...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1680</th>\n",
+       "      <td>i do not feel rejected anymore for i decide wh...</td>\n",
        "      <td>sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16619</th>\n",
-       "      <td>i posted i think it was about feeling sorta sh...</td>\n",
+       "      <th>17498</th>\n",
+       "      <td>im feeling inspired today</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19720</th>\n",
+       "      <td>i started questioning god feeling worthless an...</td>\n",
        "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9864</th>\n",
+       "      <td>im feeling pretty smug about going down yester...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9578</th>\n",
+       "      <td>i often hear that i give a feeling like i m lo...</td>\n",
+       "      <td>surprise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8002</th>\n",
+       "      <td>i was already nervous about this match but by ...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12110</th>\n",
+       "      <td>i always felt like i could do anything but now...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18849</th>\n",
+       "      <td>im spending less especially on stuff that wont...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9214</th>\n",
+       "      <td>i feel so ugly lately</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16178</th>\n",
+       "      <td>i am not a vegetarian and probably never will ...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8188</th>\n",
+       "      <td>ive stamped out old relationships feeling like...</td>\n",
+       "      <td>love</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16611</th>\n",
+       "      <td>i woke up this morning feeling hopeful and ene...</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9716</th>\n",
+       "      <td>i remembered that i gave my day to the holy sp...</td>\n",
+       "      <td>sadness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15309</th>\n",
+       "      <td>i think we ll feel pretty good about that</td>\n",
+       "      <td>joy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12359</th>\n",
+       "      <td>i know im probably preaching to the choir on t...</td>\n",
+       "      <td>love</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -200,26 +200,26 @@
       ],
       "text/plain": [
        "                                               statement   emotion\n",
-       "18180  i was feeling particularly vulnerable in a spe...      fear\n",
-       "18768  i feel like damaged goods no one will want me now   sadness\n",
-       "9304       i just feel like i havent shaken it up lately      fear\n",
-       "9950   i parted feeling that we had created some wond...       joy\n",
-       "8559   i love more than anyone made me feel like i ha...   sadness\n",
-       "18093  i was feeling weird the other day and it went ...      fear\n",
-       "19748  i didnt want to be spending my days working in...     anger\n",
-       "12062  i gave them a little something out of my paypa...       joy\n",
-       "6812   i usually am all over that it probably comes t...       joy\n",
-       "11371  i was thinking about going out to dinner but i...     anger\n",
-       "6431   i got contact lenses the other day and am tryi...  surprise\n",
-       "19422  i was wondering if you will focus on the probl...   sadness\n",
-       "2892   i told her i don t think she appreciates just ...   sadness\n",
-       "461    i just remember being so fully stressed out an...       joy\n",
-       "4735                         i am feeling all melancholy   sadness\n",
-       "2713           i just feel overwhelmed thinking about it  surprise\n",
-       "5175                       i start feeling anxious again      fear\n",
-       "61     i ate i could feel a gentle tingle throughout ...      love\n",
-       "8710   i feel so disturbed i have been having difficu...   sadness\n",
-       "16619  i posted i think it was about feeling sorta sh...   sadness"
+       "5332   i feel that i am getting more and more timid t...      fear\n",
+       "1677   i really am a hard worker and feel quite loyal...      love\n",
+       "17072  i love your style and feel very comfortable wi...       joy\n",
+       "9820   i feel sympathetic towards companies that have...      love\n",
+       "17543  im glad i feel this way because if i didnt the...      love\n",
+       "1680   i do not feel rejected anymore for i decide wh...   sadness\n",
+       "17498                          im feeling inspired today       joy\n",
+       "19720  i started questioning god feeling worthless an...   sadness\n",
+       "9864   im feeling pretty smug about going down yester...       joy\n",
+       "9578   i often hear that i give a feeling like i m lo...  surprise\n",
+       "8002   i was already nervous about this match but by ...       joy\n",
+       "12110  i always felt like i could do anything but now...       joy\n",
+       "18849  im spending less especially on stuff that wont...       joy\n",
+       "9214                               i feel so ugly lately   sadness\n",
+       "16178  i am not a vegetarian and probably never will ...      love\n",
+       "8188   ive stamped out old relationships feeling like...      love\n",
+       "16611  i woke up this morning feeling hopeful and ene...       joy\n",
+       "9716   i remembered that i gave my day to the holy sp...   sadness\n",
+       "15309          i think we ll feel pretty good about that       joy\n",
+       "12359  i know im probably preaching to the choir on t...      love"
       ]
      },
      "execution_count": 3,
@@ -740,7 +740,7 @@
     {
      "data": {
       "text/plain": [
-       "['..\\\\models\\\\text-emotion-classifier.joblib']"
+       "['..\\\\text-emotion-classifier.joblib']"
       ]
      },
      "execution_count": 20,
@@ -749,7 +749,7 @@
     }
    ],
    "source": [
-    "joblib.dump(pipe_lor,r'..\\models\\text-emotion-classifier.joblib')"
+    "joblib.dump(pipe_lor,r'..\\text-emotion-classifier.joblib')"
    ]
   },
   {
